# modularity_composability

./: CMakeLists.txt  README.md
include/: benchmark.hpp  math_ops.hpp
src/: benchmark.cpp  main.cpp  math_ops.cpp
